adicion de seccion conceptos, listo para pasar a seccion herramientas

--- a/notes/fases_add.tex
+++ b/notes/fases_add.tex
@@ -2,11 +2,12 @@
 Segun Google Data Analytics
 
 \subsection{Act - Preguntar}
-
 \begin{itemize}
-    \item {Definición del desafío/objetivo empresarial}
-    \item {Definir proyectos y lineamientos para lo que se considera exitoso}
-    \item {\textbf{Preguntas efectivas}, colaboración con líderes y gerentes:
+    \item {Definición del desafío/objetivo empresarial, junto a los lineamientos para lo que se considera exitoso}
+    \item {Comprender las expectativas de los Stakeholders}
+    \item {Colaboración con Expertos en la Materia y otros profesionales}
+    \item {Aplicación del Pensamiento Analítico/Estructural}
+    \item {\textbf{Preguntas efectivas : }
     \begin{itemize}
         \item {Cuál es la principal causa del problema?}
         \begin{itemize}
@@ -17,20 +18,54 @@ Segun Google Data Analytics
             \item {\textbf{Análisis de Déficit - Gap Analysis : }Método de evaluación y examinación de un proceso y cómo funciona actualmente, para determinar cómo llegar a la meta a futuro}
         \end{itemize}
         \item {Qué no consideramos previamente?}
+        \begin{itemize}
+            \item {Observar el estado actual, e idenfiticar qué lo diferencia del estado ideal}
+        \end{itemize}
     \end{itemize}}
 \end{itemize}
 
 \subsection{Prepare - Preparar}
-Generación, recopilación, almacenamiento, administración de datos
+\begin{itemize}
+    \item {Recolectar y capturar datos}
+    \item {Seleccionar tipo de dato de acuerdo al problema: formatos, tipos y estructuras}
+    \item {Tomar medidas para evitar sesgos y mantener imparcialidad}
+    \item {Almacenamiento y administración de dichos datos}
+\end{itemize}
 
 \subsection{Process - Procesar}
-Limpieza de datos, integridad y ética
+\begin{itemize}
+    \item {\textbf{Limpieza de datos : }
+    \begin{itemize}
+        \item {Completar datos usando otras fuentes externas}
+        \item {Eliminar y manejar errores, imprecisiones y casos extremos}
+        \item {Transformación a formatos distintos}
+    \end{itemize}}
+    \item {Control de calidad previo al análisis}
+\end{itemize}
 
 \subsection{Analyze - Analizar}
-Exploración, análisis, visualización de datos
+\begin{itemize}
+    \item {Exploración de los datos ya preparados :
+    \begin{itemize}
+        \item {Usar herramientascomo hojas de cálculo, bases de datos y queries}
+        \item {Formatear, tansformar, ordenar y filtrar datos}
+    \end{itemize}
+    \item {Identificar patrones y conclusiones}
+    \item {Realizar predicciones y recomendaciones}}
+\end{itemize}
 
 \subsection{Share - Compartir}
-Comunicación e interpretación de los resultados
+\begin{itemize}
+    \item {Interpretar resultados a través de \textbf{Visualización}}
+    \item {Comunicar resultados y ayudar a Stakeholders para comprenderlos}
+    \item {Evaluación y toma de decisiones}
+\end{itemize}
 
 \subsection{Act - Actuar}
-Resolución del problema principal dados resultados y conclusiones
+\begin{itemize}
+    \item {Transformar resultados en acciones de cambio}
+    \item {Resolver el desafío empresarial definido al principio del ciclo}
+    \item {Crear algo nuevo: otro proceso, otro problema, modelos nuevos}
+\end{itemize}
+
+\newpage
