--- a/notes/main.tex
+++ b/notes/main.tex
@@ -54,6 +54,7 @@
 \templateFinalcfg
 
 % ======================= INICIO DEL DOCUMENTO =======================
+\input{conceptos}
 \input{ciclo_datos}
 \input{destrezas}
 \input{fases_add}
