finished notes just before tools, which should be a new section

--- a/notes/conceptos.tex
+++ b/notes/conceptos.tex
@@ -15,6 +15,13 @@
     \end{itemize}}
     \item {\textbf{Expertos en la Materia : }Profesionales del área de estudio que pueden aportar conocimiento experto al análisis}
     \item {\textbf{\textit{Stakeholder} : }Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
+    \item {\textbf{Análisis de Negocios : }Matemática y estadística enfocada a recolectar, analizar e interpretar datos para realizar decisiones de negocio. Se identifican cuatro tipos según la \href{https://online.hbs.edu/blog/post/business-analytics-examples}{Escuela de Negocios de Harvard}:
+    \begin{itemize}
+        \item {\textbf{Descriptivo : }Identificar tendencias y patrones}
+        \item {\textbf{Predictivo : }Predicción de resultados en base a tendencias y patrones}
+        \item {\textbf{Diagnóstico : }Evaluación del problema, búsqueda del problema raíz}
+        \item {\textbf{Prescriptivo : }Test y pruebas para encontrar el mejor resultado}
+    \end{itemize}}
     
     \item {\textbf{Análisis de Personas : }Análisis de datos enfocado en los empleados y su vida laboral, con tal de definir y crear un lugar de trabajo más productivo y empoderador}
     
@@ -25,7 +32,7 @@
 \begin{itemize}
     \item {\textbf{Análisis de Datos : }
     \begin{itemize}
-        \item {Colecta, transformación, organización de datos, con el fin de sacar conclusiones, realizar predicciones y realizar decisiones informadas basadas en hechos}
+        \item {Colecta, transformación, organización de datos, con el fin de sacar conclusiones, realizar predicciones y tomar decisiones informadas basadas en hechos}
         \item {Responder preguntas ya existentes, al proponer nuevas perspectivas en base a datos y sus fuentes}
         \item {\textbf{Analista de Datos : }Persona que recolecta, transforma, organiza datos para ayudar a realizar decisiones informadas}
     \end{itemize}}
