--- a/notes/fases_add.tex
+++ b/notes/fases_add.tex
@@ -20,13 +20,17 @@ Segun Google Data Analytics
         \item {Qué no consideramos previamente?}
         \begin{itemize}
             \item {Observar el estado actual, e idenfiticar qué lo diferencia del estado ideal}
+            \item {Hay datos previos para revisar?}
+            \item {Hay preconcepciones? Cuáles?}
         \end{itemize}
+        \item{Qué intentamos lograr?}
     \end{itemize}}
 \end{itemize}
 
 \subsection{Prepare - Preparar}
 \begin{itemize}
-    \item {Recolectar y capturar datos}
+    \item {Planificación de datos de acuerdo al proyecto}
+    \item {Recolección y Captura}
     \item {Seleccionar tipo de dato de acuerdo al problema: formatos, tipos y estructuras}
     \item {Tomar medidas para evitar sesgos y mantener imparcialidad}
     \item {Almacenamiento y administración de dichos datos}
@@ -57,7 +61,11 @@ Segun Google Data Analytics
 \subsection{Share - Compartir}
 \begin{itemize}
     \item {Interpretar resultados a través de \textbf{Visualización}}
-    \item {Comunicar resultados y ayudar a Stakeholders para comprenderlos}
+    \item {Comunicar resultados : 
+    \begin{itemize}
+        \item {Exclusivo para Stakeholders y personas con acceso autorizado}
+        \item {Conversaciones para ayudar a comprender resultados}
+    \end{itemize}}
     \item {Evaluación y toma de decisiones}
 \end{itemize}
 
