finished M3, ready to go further into tools

--- a/notes/ciclo_datos.tex
+++ b/notes/ciclo_datos.tex
@@ -43,7 +43,7 @@
 \scriptsize
 \begin{tabular}{|p{0.05\textwidth}|p{0.18\textwidth}|p{0.18\textwidth}|p{0.18\textwidth}|p{0.19\textwidth}|} 
 \hline
- & Servicio de Pesca y \break Vida Silvestre (USA) & Servicio Geológico de EEUU (USGS) & Instituciones\break Financieras & Escuela de Negocios de Harvard (HBS) \\ 
+ & {Servicio de Pesca y \break Vida Silvestre (USA)} & \href{https://www.usgs.gov/data-management/data-lifecycle}{Servicio Geológico de EEUU (USGS)} & \href{https://www.sfmagazine.com/articles/2018/july/the-data-life-cycle/}{Strategic Finance \break Magazine} & \href{https://online.hbs.edu/blog/post/data-life-cycle}{Escuela de Negocios de Harvard (HBS)} \\ 
 \hline
 Ciclo\break de\break Vida & 
 \begin{itemize}
