--- a/notes/main.tex
+++ b/notes/main.tex
@@ -57,6 +57,7 @@
 \input{conceptos}
 \input{ciclo_datos}
 \input{destrezas}
+\input{herramientas}
 \input{fases_add}
 \input{otros_f_add}
 \input{example} % Ejemplo, se puede borrar
