--- a/notes/conceptos.tex
+++ b/notes/conceptos.tex
@@ -9,12 +9,16 @@
     \begin{itemize}
         \item {Esto incluye las herramientas de \textit{Hardware} y \textit{Software}}
     \end{itemize}}
+    \item {\textbf{Fórmula : }Set de instrucciones para un cálculo específico, aplicado usando datos disponibles. \textit{Ejemplos : }Promedio, Error, Desviación Estándar}
+    \item {\textbf{Función : }Comando preestablecido que realiza automáticamente una tarea, aplicado usando datos disponibles}
+    \item {\textbf{Base de Datos - \textit{Database} : }Colección de datos estructurados almacenados en un sistema informático. Pueden (o no) ser del tipo SQL}
+    \item {\textbf{Consulta - \textit{Query} : }Petición a una Base de Datos para obtener y manipular datos}
     \item {\textbf{\textit{Data-driven decision making : }}Utilización de datos para guiar la Estrategia de Negocios 
     \begin{itemize}
         \item {Los datos nunca serán más poderosos que su combinación con experiencia humana, observación e intuición}
     \end{itemize}}
     \item {\textbf{Expertos en la Materia : }Profesionales del área de estudio que pueden aportar conocimiento experto al análisis}
-    \item {\textbf{\textit{Stakeholder} : }Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
+    \item {\textbf{Interesado - \textit{Stakeholder} : }Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
     \item {\textbf{Análisis de Negocios : }Matemática y estadística enfocada a recolectar, analizar e interpretar datos para realizar decisiones de negocio. Se identifican cuatro tipos según la \href{https://online.hbs.edu/blog/post/business-analytics-examples}{Escuela de Negocios de Harvard}:
     \begin{itemize}
         \item {\textbf{Descriptivo : }Identificar tendencias y patrones}
