--- a/notes/ciclo_datos.tex
+++ b/notes/ciclo_datos.tex
@@ -3,32 +3,32 @@
 \textit{No confundir con análisis, solamente datos}
 
 \begin{itemize}
-    \item {\textbf{Planning - Planificación : }
+    \item {\textbf{\textit{Planning} - Planificación} :
     \begin{itemize}
         \item {Características de los datos a tomar: qué tipo, cómo obtenerlos, quién los administra, resultados óptimos}
         \item {Qué tipos de datos se necesitan? Cómo se gestionarán? Quién será el responsable de ellos}
     \end{itemize}}
-    \item {\textbf{Capture - Captura : }
+    \item {\textbf{\textit{Capture} - Captura} :
     \begin{itemize}
         \item {Recolección de datos desde distintas fuentes como Bases de Datos, Archivos, Encuestas...}
     \end{itemize}}
-    \item {\textbf{Manage - Mantención : }
+    \item {\textbf{\textit{Manage} - Mantención} :
     \begin{itemize}
         \item {Cuidado de los datos, almacenamiento y seguridad}
         \item {Cómo y dónde se almacenan? Qué herramientas se usan para hacerlo?}
         \item {\textit{No corresponde limpieza, ya que es una tarea del analista y no una parte del ciclo de vida}}
     \end{itemize}}
-    \item {\textbf{Analyze - Análisis : }
+    \item {\textbf{\textit{Analyze} - Análisis} :
     \begin{itemize}
         \item {Resolución del problema utilizando los datos}
         \item {Uso de los datos para respaldar objetivos empresariales y tomar decisiones}
     \end{itemize}}
-    \item {\textbf{Archive - Archivar : }
+    \item {\textbf{\textit{Archive} - Archivar} :
     \begin{itemize}
         \item {Almacenar los datos en un lugar donde estén disponible para referencias futuras y a largo plazo}
         \item {Pueden o no ser usados de nuevo}
     \end{itemize}}
-    \item {\textbf{Destroy - Destrucción : }
+    \item {\textbf{\textit{Destroy} - Destrucción} :
     \begin{itemize}
        \item {Eliminar los datos y las copias compartidas}
        \item {Se destruye la documentación en papel, o se realiza limpieza de discos duros, servidores y bases de datos}
@@ -83,6 +83,20 @@ Ciclo\break de\break Vida &
 \end{table}
 
 {\footnotesize {USGS realiza otras actividades transversales, como Describir (metadatos y documentación), y Gestionar calidad y copias de seguridad}}
+
+\subsection{Tipos de Datos}
+\begin{itemize}
+    \item {\textbf{Cuantitativos} : Medidas específicas y objetivas con hechos numéricos
+    \begin{itemize}
+        \item {Qué cosas? Cuántas? Qué tan seguido?}
+        \item {Medibles a través de tablas, gráficos y visualizaciones}
+    \end{itemize}}
+    \item {\textbf{Cualitativos} : Medidas subjetivas o explanatorias para cualidades y características
+    \begin{itemize}
+        \item {Por qué? Cómo?}
+        \item {Añade contexto}
+    \end{itemize}}
+\end{itemize}
 
 \newpage
 
