--- a/notes/conceptos.tex
+++ b/notes/conceptos.tex
@@ -11,11 +11,11 @@
     \end{itemize}}
     \item {\textbf{Fórmula : }Set de instrucciones para un cálculo específico, aplicado usando datos disponibles. \textit{Ejemplos : }Promedio, Error, Desviación Estándar}
     \item {\textbf{Función : }Comando preestablecido que realiza automáticamente una tarea, aplicado usando datos disponibles}
-    \item {\textbf{Base de Datos - \textit{Database} : }Colección de datos estructurados almacenados en un sistema informático. Pueden (o no) ser del tipo SQL}
-    \item {\textbf{Consulta - \textit{Query} : }Petición a una Base de Datos para obtener y manipular datos}
-    \item {\textbf{\textit{Data-driven decision making : }}Utilización de datos para guiar la Estrategia de Negocios 
+    \item {\textbf{Algoritmo : }Proceso o set de reglas a seguir para realizar una tarea en específico}
+    \item {\textbf{\textit{Data-driven decision making : }}Uso de datos para guiar la Estrategia de Negocios 
     \begin{itemize}
         \item {Los datos nunca serán más poderosos que su combinación con experiencia humana, observación e intuición}
+        \item {\textit{\textbf{Data-driven != Data inspired : }}Explorar diversas fuentes de datos para encontrar similitudes entre ellas}
     \end{itemize}}
     \item {\textbf{Expertos en la Materia : }Profesionales del área de estudio que pueden aportar conocimiento experto al análisis}
     \item {\textbf{Interesado - \textit{Stakeholder} : }Persona que invierte tiempo y recurso en el proyecto, que le interesa el resultado del estudio}
