--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -24,4 +24,13 @@
     
 \end{itemize}
 
+\textbf{Pensamiento Estructurado\textit{ - Structured Thinking} : }Proceso en el que se reconoce el problema/situación y se organiza la información disponible, para revelar deficiencias, oportunidades y opciones.
+
+\subsection{Roles clave en el Estudio de Datos}
+\begin{itemize}
+    \item {\textbf{Analista de Datos :}Trabaja generalmente con DB, puede trabar creando paneles}
+    \item {\textbf{Ingeniero de Datos : }Procesa los datos iniciales para crear un proceso viable. Generalmente es el encargado de prepararlos para los analistas y científicos}
+    \item {\textit{Científico de Datos : }Crea modelos utilizando dichos datos}
+\end{itemize}
+
 \newpage
