--- a/notes/fases_add.tex
+++ b/notes/fases_add.tex
@@ -1,64 +1,59 @@
 \section{Ciclo de Vida del Análisis de Datos}
 Segun Google Data Analytics
 
-\subsection{Act - Preguntar}
+\input{act}
+
+\subsection{\textit{Prepare - }Preparar}
 \begin{itemize}
-    \item {Definición del desafío/objetivo empresarial, junto a los lineamientos para lo que se considera exitoso}
-    \item {Comprender las expectativas de los Stakeholders}
-    \item {Colaboración con Expertos en la Materia y otros profesionales}
-    \item {Aplicación del Pensamiento Analítico/Estructural}
-    \item {\textbf{Preguntas efectivas : }
+    \item {Planificación de datos de acuerdo al proyecto
     \begin{itemize}
-        \item {Cuál es la principal causa del problema?}
-        \begin{itemize}
-            \item {\textbf{Five Why's : }Preguntar ''por qué?'' cinco veces para llegar a la raíz del problema}
-        \end{itemize}
-        \item {Cuáles son los déficits de nuestro proyecto?}
-        \begin{itemize}
-            \item {\textbf{Análisis de Déficit - Gap Analysis : }Método de evaluación y examinación de un proceso y cómo funciona actualmente, para determinar cómo llegar a la meta a futuro}
-        \end{itemize}
-        \item {Qué no consideramos previamente?}
-        \begin{itemize}
-            \item {Observar el estado actual, e idenfiticar qué lo diferencia del estado ideal}
-            \item {Hay datos previos para revisar?}
-            \item {Hay preconcepciones? Cuáles?}
-        \end{itemize}
-        \item{Qué intentamos lograr?}
+        \item {Seleccionar tipo de datos de acuerdo al problema: métricas, formatos y estructuras}
+        \item {Determinar medidas de seguridad para proteger los datos}
+        \item {Determinar almacenamiento, administración y acceso a datos}
+    \end{itemize}}
+    \item {Recolección y Captura}
+    \item {Tomar medidas para evitar sesgos y mantener imparcialidad}
+    \item {\textbf{Preguntas Efectivas:}
+    \begin{itemize}
+        \item {Qué necesito para descubrir cómo resolver este problema?}
+        \item {Qué investigación previa debo realizar?}
     \end{itemize}}
 \end{itemize}
 
-\subsection{Prepare - Preparar}
-\begin{itemize}
-    \item {Planificación de datos de acuerdo al proyecto}
-    \item {Recolección y Captura}
-    \item {Seleccionar tipo de dato de acuerdo al problema: formatos, tipos y estructuras}
-    \item {Tomar medidas para evitar sesgos y mantener imparcialidad}
-    \item {Almacenamiento y administración de dichos datos}
-\end{itemize}
-
-\subsection{Process - Procesar}
+\subsection{\textit{Process - }Procesar}
 \begin{itemize}
     \item {\textbf{Limpieza de datos : }
     \begin{itemize}
-        \item {Completar datos usando otras fuentes externas}
-        \item {Eliminar y manejar errores, imprecisiones y casos extremos}
-        \item {Transformación a formatos distintos}
+        \item {Uso de funciones en spreadsheets y SQL/DB para encontrar datos incorrectos, espacios adicionales o entradas repetidas}
+        \item {Manejo de imprecisiones y casos extremos}
+        \item {Comprobar sesgos, errores e inexactitudes}
     \end{itemize}}
-    \item {Control de calidad previo al análisis}
+    \item {\textbf{Preguntas efectivas:}
+    \begin{itemize}
+        \item {Cómo puedo limpiar datos para que mis datos sean más coherentes?}
+        \item {Qué errores podrían interponerse en mi camino?}
+    \end{itemize}}
 \end{itemize}
 
-\subsection{Analyze - Analizar}
+\subsection{\textit{Analyze - }Analizar}
 \begin{itemize}
     \item {Exploración de los datos ya preparados :
     \begin{itemize}
-        \item {Usar herramientascomo hojas de cálculo, bases de datos y queries}
-        \item {Formatear, tansformar, ordenar y filtrar datos}
-    \end{itemize}
+        \item {Formatear, transformar, ordenar y filtrar datos}
+        \item {Combinar datos de varias fuentes}
+        \item {Realizar diversos cálculos en spreadsheets y DB}
+    \end{itemize}}
     \item {Identificar patrones y conclusiones}
-    \item {Realizar predicciones y recomendaciones}}
+    \item {Realizar predicciones y recomendaciones}
+    \item {\textbf{Preguntas Efectivas:}
+    \begin{itemize}
+        \item {Qué historia me cuentan los datos?}
+        \item {Como ayudan estos datos a resolver el problema?}
+        \item {Quién necesita el producto o servicio, qué tipo de cliente es más probable que lo use?}
+    \end{itemize}}
 \end{itemize}
 
-\subsection{Share - Compartir}
+\subsection{\textit{Share - }Compartir}
 \begin{itemize}
     \item {Interpretar resultados a través de \textbf{Visualización}}
     \item {Comunicar resultados : 
@@ -66,14 +61,24 @@ Segun Google Data Analytics
         \item {Exclusivo para Stakeholders y personas con acceso autorizado}
         \item {Conversaciones para ayudar a comprender resultados}
     \end{itemize}}
-    \item {Evaluación y toma de decisiones}
+    \item {\textbf{Preguntas efectivas:}
+    \begin{itemize}
+        \item {Cómo puedo visualizar los datos para que sean atractivos y fáciles de entender?}
+        \item {Cómo puedo ayudar al oyente a entender la información?}
+        \item {Cuáles son las decisiones más informadas?}
+        \item {Qué decisiones pueden tomarse en base a los resultados?}
+    \end{itemize}}
 \end{itemize}
 
-\subsection{Act - Actuar}
+\subsection{\textit{Act - }Actuar}
 \begin{itemize}
     \item {Transformar resultados en acciones de cambio}
     \item {Resolver el desafío empresarial definido al principio del ciclo}
     \item {Crear algo nuevo: otro proceso, otro problema, modelos nuevos}
+    \item {\textbf{Preguntas efectivas: }
+    \begin{itemize}
+        \item {Cómo puedo utilizar el feedback de los stakeholders para satisfacer sus necesidades y expectativas?}
+    \end{itemize}}
 \end{itemize}
 
 \newpage
