--- a/notes/herramientas.tex
+++ b/notes/herramientas.tex
@@ -12,6 +12,7 @@
     \item {Aislar información específica de una base de datos}
     \item {Facilitar aprendizaje y comprensión de las solicitudes/consultas}
     \item {Seleccionar, crear, agregar o descargar datos desde la Base de Datos para Análisis}
+    \item {\textbf{\textit{Query} - Consulta} : Petición a una Base de Datos para obtener y manipular datos}
     \item {\textbf{Tipos de Base de Datos : }
     \begin{itemize}
         \item {\textbf{SQL : }\textit{Structured Query Language.} MySQL, PostgreSQL, Big Query}
@@ -43,11 +44,72 @@
     \end{tabular}
 \end{table}
 
-\subsection{Herramientas de Visualización}
+\subsection{\textit{Data Viz} - Herramientas de Visualización}
 \begin{itemize}
     \item {Permiten crear gráficos, tablas, mapas y cuadros}
     \item {Convierten números complejos en historias que las personas puedan entender}
     \item {Ayudan a interesados a sacar conclusiones que permiten tomar decisiones informadas y elaborar estrategias empresariales eficaces}
+    \item {\textbf{Métrica} : Tipo de dato singular y cuantificable que puede utilizarse para medir algo
+    \begin{itemize}
+        \item {\textbf{Meta Métrica} : Meta propuesta por una compañía que puede ser medida y evaluada de acuerdo a métricas}
+        \item {\textit{Ejemplo} : Retorno de Inversión = \(\frac{Ganancia Neta}{Costo de Inversión}\)}
+    \end{itemize}}
+    \item {\textbf{\textit{Pivot Table} - Tabla Pivote} : Utilizado en el procesamiento de datos, permite resumir, ordenar y reorganizar datos en un DB, para realizar cálculos como promedios o cantidades totales}
+    \item {Herramientas para compartir datos : 
+    \begin{itemize}
+        \item {\textbf{\textit{Report} - Informes} : Recuento estático de los datos dados, entregados de forma periódica a los \textit{stakeholders}}
+        \item {\textbf{\textit{Dashboard} - Panel} : Monitoreo constante y en vivo de datos entrantes
+        \begin{itemize}
+            \item {Ubicación central para varios conjuntos de datos}
+            \item {Ingreso automático de datos \textit{solo si la estructura de datos es la misma}}
+            \begin{table}
+        \centering
+        \begin{tabular}{|p{2.5cm}|p{6.5cm}|p{6.5cm}|}
+            \hline
+            \multicolumn{3}{|c|}{Beneficios de paneles} \\
+            \hline
+             & \textbf{Para analistas} & \textbf{Para \textit{stakeholders}} \\
+            \hline
+            \small{\textbf{Centralización}} & Compartir una única fuente de datos con todos los interesados & Trabajar con visión integral de datos, iniciativas, objetivos, proyectos, procesos y más \\
+            \hline
+            \small{\textbf{Visualización}} & Mostrar y actualizar datos entrantes en vivo en tiempo real & Detectar patrones y tendencias cambiante más rápidamente \\
+            \hline
+            \small{\textbf{Percepción}} & Extraer información relevante de diferentes conjuntos de datos & Comprender la historia detrás de los números para realizar un seguimiento de los objetivos y tomar decisiones basadas en datos \\
+            \hline
+            \small{\textbf{Personalización}} & Crear vistas personalizadas dedicadas a una persona específica, un proyecto o una presentación de los datos & Profundizar en áreas más específicas de preocupaciones o intereses personalizados \\
+            \hline
+        \end{tabular}
+    \end{table}
+        \end{itemize}}
+        \begin{table}
+        \centering
+        \begin{tabular}{|p{2cm}|p{6cm}|p{6cm}|}
+            \hline
+            & \textbf{Pros} & \textbf{Contras} \\
+            \hline
+            \small{\textbf{\textit{Reports}}} & \begin{itemize}
+                \item {Datos de alto nivel histórico}
+                \item {Fácil de diseñar y usar}
+                \item {Datos previamente limpiados y ordenados}
+            \end{itemize} & \begin{itemize}
+                \item {Mantenimiento contínuo}
+                \item {Estático}
+                \item {Menos atractivo visual}
+            \end{itemize} \\
+            \hline
+            \small{\textbf{\textit{Dashboard}}} & \begin{itemize}
+                \item {Dinámico, automático e interactivo}
+                \item {Mejor acceso para \textit{stakeholders}}
+                \item {Bajo mantenimiento}
+            \end{itemize} & \begin{itemize}
+                \item {Diseño requiere más trabajo}
+                \item {Puede ser confuso}
+                \item {Datos potencialmente sin procesar}
+            \end{itemize} \\
+            \hline
+        \end{tabular}
+    \end{table}
+    \end{itemize}}
     \item {\textbf{Ejemplos y Características : }
     \begin{itemize}
         \item {\textbf{Tableau : }\textit{arrastrar + soltar} para crear gráficos interactivos en paneles y hojas de trabajo}
