--- a/notes/main.tex
+++ b/notes/main.tex
@@ -38,6 +38,9 @@
 % IMPORTACIÓN DEL TEMPLATE
 \input{template}
 
+% Multirow for tables
+\usepackage{multirow}
+
 % INICIO DE PÁGINAS
 \begin{document}
 
@@ -60,7 +63,8 @@
 \input{herramientas}
 \input{fases_add}
 \input{otros_f_add}
-\input{example} % Ejemplo, se puede borrar
+\input{problemas}
+%\input{example} Ejemplo, se puede borrar
 
 % FIN DEL DOCUMENTO
 \end{document}
