u2-m2 done, entering m3, could use some style fixes

--- a/notes/ciclo_datos.tex
+++ b/notes/ciclo_datos.tex
@@ -10,7 +10,7 @@
     \end{itemize}}
     \item {\textbf{\textit{Capture} - Captura} :
     \begin{itemize}
-        \item {Recolección de datos desde distintas fuentes como Bases de Datos, Archivos, Encuestas...}
+        \item {Recolección de datos desde distintas fuentes como DB, Archivos, Encuestas...}
     \end{itemize}}
     \item {\textbf{\textit{Manage} - Mantención} :
     \begin{itemize}
@@ -41,26 +41,26 @@
 \begin{table}
 \centering
 \scriptsize
-\begin{tabular}{|p{0.05\textwidth}|p{0.18\textwidth}|p{0.18\textwidth}|p{0.18\textwidth}|p{0.19\textwidth}|} 
+\begin{tabular}{|p{0.05\textwidth}|p{0.15\textwidth}|p{0.17\textwidth}|p{0.15\textwidth}|p{0.18\textwidth}|} 
 \hline
  & {Servicio de Pesca y \break Vida Silvestre (USA)} & \href{https://www.usgs.gov/data-management/data-lifecycle}{Servicio Geológico de EEUU (USGS)} & \href{https://www.sfmagazine.com/articles/2018/july/the-data-life-cycle/}{Strategic Finance \break Magazine} & \href{https://online.hbs.edu/blog/post/data-life-cycle}{Escuela de Negocios de Harvard (HBS)} \\ 
 \hline
 Ciclo\break de\break Vida & 
-\begin{itemize}
+\begin{description}
     \item Planificar
     \item Adquirir
     \item Mantener
     \item Acceder
     \item Evaluar
     \item Archivar
-\end{itemize} & \begin{itemize}
+\end{description} & \begin{description}
     \item Planificar
     \item Adquirir
     \item Procesar
     \item Analizar
     \item Preservar
-    \item Publicar/\break Compartir
-\end{itemize} & \begin{itemize}
+    \item Publicar/Compartir
+\end{description} & \begin{description}
     \item Capturar
     \item Calificar
     \item Transformar
@@ -68,7 +68,7 @@ Ciclo\break de\break Vida &
     \item Informar
     \item Archivar
     \item Depurar
-\end{itemize} & \begin{itemize}
+\end{description} & \begin{description}
     \item Generación
     \item Recolección
     \item Procesamiento
@@ -77,26 +77,11 @@ Ciclo\break de\break Vida &
     \item Análisis
     \item Visualización
     \item Interpretación
-\end{itemize} \\ 
+\end{description} \\ 
 \bottomrule
 \end{tabular}
 \end{table}
 
 {\footnotesize {USGS realiza otras actividades transversales, como Describir (metadatos y documentación), y Gestionar calidad y copias de seguridad}}
 
-\subsection{Tipos de Datos}
-\begin{itemize}
-    \item {\textbf{Cuantitativos} : Medidas específicas y objetivas con hechos numéricos
-    \begin{itemize}
-        \item {Qué cosas? Cuántas? Qué tan seguido?}
-        \item {Medibles a través de tablas, gráficos y visualizaciones}
-    \end{itemize}}
-    \item {\textbf{Cualitativos} : Medidas subjetivas o explanatorias para cualidades y características
-    \begin{itemize}
-        \item {Por qué? Cómo?}
-        \item {Añade contexto}
-    \end{itemize}}
-\end{itemize}
-
 \newpage
-
