--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -1,36 +1,37 @@
 \section{Destrezas del Analista de Datos}
-\textbf{Habilidades Analíticas : }Cualidades y características asociadas con la resolución de problemas usando hechos:
 
+\subsection{Habilidades Analíticas}
+Cualidades y características asociadas con la resolución de problemas usando hechos
 \begin{itemize}
-    \item {\textbf{Curiosidad : }Querer aprender algo}
-    \item {\textbf{Entender Contexto : }Comprensión del ambiente en que se genera, produce o utiliza una idea}
-    \item {\textbf{Mentalidad Técnica : }Desglosar cosas en pasos o partes pequeñas, y trabajar con ellas de forma lógica y ordenada}
-    \item {\textbf{Diseño de Datos : }Organización de la información por formatos, tipos o almacenamientos}
-    \item {\textbf{Estrategia de datos : }Gestión de la gente, procesos y herramientas usadas en el Análisis de Datos}
+    \item {\textbf{Curiosidad} : Querer aprender algo}
+    \item {\textbf{Entender Contexto} : Comprensión del ambiente en que se genera, produce o utiliza una idea}
+    \item {\textbf{Mentalidad Técnica} : Desglosar cosas en pasos o partes pequeñas, y trabajar con ellas de forma lógica y ordenada}
+    \item {\textbf{Diseño de Datos} : Organización de la información por formatos, tipos o almacenamientos}
+    \item {\textbf{Estrategia de datos} : Gestión de la gente, procesos y herramientas usadas en el Análisis de Datos}
 \end{itemize}
 
-\textbf{Pensamiento Analítico : }Identificar y definir un problema, para luego resolverlo usando datos de forma organizada, paso a paso. Presenta 5 aspectos principales:
-
+\subsection{Pensamiento Analítico}
+Identificar y definir un problema, para luego resolverlo usando datos de forma organizada, paso a paso. Presenta 5 aspectos principales:
 \begin{itemize}
-    \item {\textbf{Visualización : }Representación gráfica de la información}
-    \item {\textbf{Ser Estratégico : }Crear planes para resolver un problema dado ciertos datos, manteniendo el enfoque, calidad y utilidad}
-    \item {\textbf{Pensamiento Orientado a Problemas : }Identificar problema, y mantenerlo como motor principal del proyecto completo}
-    \item {\textbf{Correlación : }Relación entre dos variables. \textit{Correlación ${\neq}$ causalidad}}
+    \item {\textbf{Visualización} : Representación gráfica de la información}
+    \item {\textbf{Ser Estratégico} : Crear planes para resolver un problema dado ciertos datos, manteniendo el enfoque, calidad y utilidad}
+    \item {\textbf{Pensamiento Orientado a Problemas} : Identificar problema, y mantenerlo como motor principal del proyecto completo}
+    \item {\textbf{Correlación} : Relación entre dos variables. \textit{Correlación ${\neq}$ causalidad}}
     \item{Los siguientes aspectos debieran considerarse al mismo tiempo :
     \begin{itemize}
-        \item {\textbf{Big Picture Thinking : }Visión del panorama completo}
-        \item {\textbf{Detail Oriented Picture : }Estudio de las partes en detalle}
+        \item {\textbf{Big Picture Thinking} : Visión del panorama completo}
+        \item {\textbf{Detail Oriented Picture} : Estudio de las partes en detalle}
     \end{itemize}}
-    
 \end{itemize}
 
-\textbf{Pensamiento Estructurado\textit{ - Structured Thinking} : }Proceso en el que se reconoce el problema/situación y se organiza la información disponible, para revelar deficiencias, oportunidades y opciones.
+\subsection{\textit{Structured Thinking} - Pensamiento Estructurado}
+Proceso en el que se reconoce el problema/situación y se organiza la información disponible, para revelar deficiencias, oportunidades y opciones.
 
 \subsection{Roles clave en el Estudio de Datos}
 \begin{itemize}
-    \item {\textbf{Analista de Datos :}Trabaja generalmente con DB, puede trabar creando paneles}
-    \item {\textbf{Ingeniero de Datos : }Procesa los datos iniciales para crear un proceso viable. Generalmente es el encargado de prepararlos para los analistas y científicos}
-    \item {\textit{Científico de Datos : }Crea modelos utilizando dichos datos}
+    \item {\textbf{Analista de Datos} : Trabaja generalmente con DB, puede trabar creando paneles}
+    \item {\textbf{Ingeniero de Datos} : Procesa los datos iniciales para crear un proceso viable. Generalmente es el encargado de prepararlos para los analistas y científicos}
+    \item {\textbf{Científico de Datos} : Crea modelos utilizando dichos datos}
 \end{itemize}
 
 \newpage
