--- a/notes/main.tex
+++ b/notes/main.tex
@@ -58,6 +58,7 @@
 
 % ======================= INICIO DEL DOCUMENTO =======================
 \input{conceptos}
+\input{tipos}
 \input{ciclo_datos}
 \input{destrezas}
 \input{herramientas}
