--- a/notes/herramientas.tex
+++ b/notes/herramientas.tex
@@ -1,13 +1,15 @@
-\section {Kit de Herramientas del Analista de Datos}
+\section {Kit de Herramientas del Analista}
 
-\subsection{Hojas de Cálculo - \textit{Spreadsheets}}
+\subsection{\textit{Spreadsheets} - Hojas de Cálculo}
 \begin{itemize}
     \item {Recopilar, almacenar, organizar y ordenar información}
+    \item {Organización de los datos a través de clasificación y filtros}
+    \item {Uso de fórmulas y funciones para realizar cálculos utilizando los datos}
     \item {Identificar patrones, reunir datos de manera que se adapten al proyecto en cuestión}
     \item {Crear visualizaciones de datos como gráficos y tablas}
 \end{itemize}
 
-\subsection{Bases de Datos y Consultas - \textit{Databases + Queries}}
+\subsection{\textit{DB + Queries} - Bases de Datos y Consultas}
 \begin{itemize}
     \item {Aislar información específica de una base de datos}
     \item {Facilitar aprendizaje y comprensión de las solicitudes/consultas}
@@ -52,72 +54,86 @@
     \item {\textbf{Métrica} : Tipo de dato singular y cuantificable que puede utilizarse para medir algo
     \begin{itemize}
         \item {\textbf{Meta Métrica} : Meta propuesta por una compañía que puede ser medida y evaluada de acuerdo a métricas}
-        \item {\textit{Ejemplo} : Retorno de Inversión = \(\frac{Ganancia Neta}{Costo de Inversión}\)}
+        \item {\textit{Ejemplo} : Retorno de Inversión = $\frac{Ganancia Neta}{Costo de Inversión}$}
     \end{itemize}}
     \item {\textbf{\textit{Pivot Table} - Tabla Pivote} : Utilizado en el procesamiento de datos, permite resumir, ordenar y reorganizar datos en un DB, para realizar cálculos como promedios o cantidades totales}
-    \item {Herramientas para compartir datos : 
-    \begin{itemize}
-        \item {\textbf{\textit{Report} - Informes} : Recuento estático de los datos dados, entregados de forma periódica a los \textit{stakeholders}}
-        \item {\textbf{\textit{Dashboard} - Panel} : Monitoreo constante y en vivo de datos entrantes
-        \begin{itemize}
-            \item {Ubicación central para varios conjuntos de datos}
-            \item {Ingreso automático de datos \textit{solo si la estructura de datos es la misma}}
-            \begin{table}
-        \centering
-        \begin{tabular}{|p{2.5cm}|p{6.5cm}|p{6.5cm}|}
-            \hline
-            \multicolumn{3}{|c|}{Beneficios de paneles} \\
-            \hline
-             & \textbf{Para analistas} & \textbf{Para \textit{stakeholders}} \\
-            \hline
-            \small{\textbf{Centralización}} & Compartir una única fuente de datos con todos los interesados & Trabajar con visión integral de datos, iniciativas, objetivos, proyectos, procesos y más \\
-            \hline
-            \small{\textbf{Visualización}} & Mostrar y actualizar datos entrantes en vivo en tiempo real & Detectar patrones y tendencias cambiante más rápidamente \\
-            \hline
-            \small{\textbf{Percepción}} & Extraer información relevante de diferentes conjuntos de datos & Comprender la historia detrás de los números para realizar un seguimiento de los objetivos y tomar decisiones basadas en datos \\
-            \hline
-            \small{\textbf{Personalización}} & Crear vistas personalizadas dedicadas a una persona específica, un proyecto o una presentación de los datos & Profundizar en áreas más específicas de preocupaciones o intereses personalizados \\
-            \hline
-        \end{tabular}
-    \end{table}
-        \end{itemize}}
-        \begin{table}
-        \centering
-        \begin{tabular}{|p{2cm}|p{6cm}|p{6cm}|}
-            \hline
-            & \textbf{Pros} & \textbf{Contras} \\
-            \hline
-            \small{\textbf{\textit{Reports}}} & \begin{itemize}
-                \item {Datos de alto nivel histórico}
-                \item {Fácil de diseñar y usar}
-                \item {Datos previamente limpiados y ordenados}
-            \end{itemize} & \begin{itemize}
-                \item {Mantenimiento contínuo}
-                \item {Estático}
-                \item {Menos atractivo visual}
-            \end{itemize} \\
-            \hline
-            \small{\textbf{\textit{Dashboard}}} & \begin{itemize}
-                \item {Dinámico, automático e interactivo}
-                \item {Mejor acceso para \textit{stakeholders}}
-                \item {Bajo mantenimiento}
-            \end{itemize} & \begin{itemize}
-                \item {Diseño requiere más trabajo}
-                \item {Puede ser confuso}
-                \item {Datos potencialmente sin procesar}
-            \end{itemize} \\
-            \hline
-        \end{tabular}
-    \end{table}
-    \end{itemize}}
-    \item {\textbf{Ejemplos y Características : }
-    \begin{itemize}
-        \item {\textbf{Tableau : }\textit{arrastrar + soltar} para crear gráficos interactivos en paneles y hojas de trabajo}
-        \item {\textbf{Looker : }Conexión directa con bases de datos}
-    \end{itemize}}
 \end{itemize}
 
-\subsection{Otras Herramientas}
+\subsubsection{\textit{Report} - Informes}
+Recuento estático de datos, entregados de forma periódica a \textit{stakeholders}
+
+\subsubsection{\textit{Dashboard} - Panel}
+Monitoreo constante y en vivo de datos entrantes, con una ubicación central que los agrupa. El ingreso de datos es automático \textit{solo si la estructura de datos es la misma}
+\paragraph{Proceso para crear un panel}
+    \begin{itemize}
+        \item {Identificar a \textit{stakeholders} que necesiten ver los datos y cómo los usarán, a través de preguntas efectivas}
+        \item {Diseño del panel : encabezados claros para etiquetar información ; descripciones de texto concisas para cada visualización ; mostrar la información más importante en la parte superior}
+        \item {Crear prototipos}
+        \item {Seleccionar visualizaciones para utilizar en el panel : cambio de valores a lo largo del tiempo con gráficos de línea y barras ; contribución de cada parte al resultado final con gráficos circulares y de torta}
+        \item {Crear filtros de ser necesario, identificar patrones mientras los datos originales se mantienen intactos}
+    \end{itemize}
+\paragraph{Tres categorías comunes de paneles}
+    \begin{itemize}
+        \item {\textbf{Paneles Estratégicos} : Toma de decisiones para la empresa en periodos más largos}
+        \item {\textbf{Paneles Operativos} : Escala temporal de días, semanas o meses, prácticamente a tiempo real}
+        \item {\textbf{Paneles Analíticos} : Uso, análisis y predicciones como categoría más técnica, realizadas por \textit{data scientists}}
+    \end{itemize}
+
+\begin{table}
+    \centering
+    \begin{tabular}{|p{2.9cm}|p{5.4cm}|p{5.5cm}|}
+        \hline
+        \multicolumn{3}{|c|}{Beneficios de paneles} \\
+        \hline
+        & \textbf{Para analistas} & \textbf{Para \textit{stakeholders}} \\
+        \hline
+        \small{\textbf{Centralización}} & Compartir una única fuente de datos con los interesados & Trabajar con visión integral de datos, iniciativas y procesos \\
+        \hline
+        \small{\textbf{Visualización}} & Mostrar y actualizar datos \break entrantes en tiempo real & Detectar patrones y tendencias cambiante más rápidamente \\
+        \hline
+         \small{\textbf{Percepción}} & Extraer información desde \break diferentes conjuntos de datos & Comprender la historia detrás de los números \\
+        \hline
+        \small{\textbf{Personalización}} & Crear vistas personalizadas para los interesados & Profundizar en preocupaciones o intereses específicos \\
+        \hline
+    \end{tabular}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{|p{1.8cm}|p{5.9cm}|p{5.9cm}|}
+        \hline
+        & \textbf{\textit{Reports}} & \textbf{\textit{Dashboard}} \\
+        \hline
+        \textbf{Pros} & \begin{description}
+            \item {Datos de alto nivel histórico}
+            \item {Fácil de diseñar y usar}
+            \item {Datos limpios y ordenados}
+        \end{description} & \begin{description}
+            \item {Automático e interactivo}
+            \item {Mejor acceso para \textit{stakeholders}}
+            \item {Bajo mantenimiento}
+        \end{description} \\
+        \hline
+        \textbf{Contras} & \begin{description}
+            \item {Mantenimiento contínuo}
+            \item {Estático}
+            \item {Menos atractivo visual}
+        \end{description} & \begin{description}
+            \item {Diseño requiere más trabajo}
+            \item {Puede ser confuso}
+            \item {Datos sin procesar}
+        \end{description} \\
+        \hline
+    \end{tabular}
+\end{table}
+    
+
+\subsection{Ejemplos y Otras Herramientas}
+Algunos ejemplos consisten en :
+\begin{itemize}
+        \item {\textbf{Tableau} : \textit{arrastrar + soltar} para crear gráficos interactivos en paneles y hojas de trabajo}
+        \item {\textbf{Looker} : Conexión directa con bases de datos}
+\end{itemize}
 Pueden usarse otras herramientas para análisis estadístico, visualizaciones y otras tareas
 \begin{itemize}
     \item {R}
